--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mssql": "^7.2.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
@@ -43,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "15.12.2",
     "@types/reflect-metadata": "^0.1.0",
     "@types/supertest": "^2.0.11",
