feat: config entity

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,27 @@
-AUTH_KEY_SECURITY                           =
-AUTH_KEY_TOKEN_EXPIRES                      =
+AUTH_KEY_SECURITY                           = Tire as construções da minha praia Não consigo respirar As meninas de mini saia Não conseguem respirar Especulação imobiliária E o petróleo em alto mar Subiu o prédio eu ouço vaia
+AUTH_KEY_TOKEN_EXPIRES                      = 36000000
 
-API_VERSION                                 = v1
-
-TYPEORM_ENGINE                              =
-TYPEORM_HOST                                =
-TYPEORM_USERNAME                            =
-TYPEORM_PASSWORD                            =
-TYPEORM_DATABASE                            =
-TYPEORM_DIRECTORY_AUTH_ENTITIES             = 
-TYPEORM_DIRECTORY_DOMAIN_ADMIN_ENTITIES     = src/modules/domain/admin/entities/**/*{.js,.ts}
-TYPEORM_DIRECTORY_HELPERS_ENTITIES          = src/modules/helpers/entities/**/*{.js,.ts}
-TYPEORM_DIRECTORY_MIGRATIONS                = src/infra/database/migrations/**/*{.js,.ts}
-TYPEORM_DIRECTORY_SAVE_ENTITIES             = 
 TYPEORM_DIRECTORY_SAVE_MIGRATIONS           = src/infra/database/migrations
-TYPEORM_DROP_SCHEMA                         = 
-TYPEORM_MIGRATION_RUN                       = 
+TYPEORM_DIRECTORY_SAVE_ENTITIES             = src/infra/database/entities
+
+TYPEORM_ENGINE_DEV                          = 
+TYPEORM_HOST_DEV                            = 
+TYPEORM_USERNAME_DEV                        = 
+TYPEORM_PASSWORD_DEV                        = 
+TYPEORM_DATABASE_DEV                        = 
+
+TYPEORM_DIRECTORY_AUTH_DEV                  = src/modules/auth/entities/*.ts
+TYPEORM_DIRECTORY_DOMAIN_DEV                = src/modules/domain/entities/*.ts
+TYPEORM_DIRECTORY_HELPERS_DEV               = src/modules/helpers/entities/*.ts
+TYPEORM_DIRECTORY_MIGRATIONS_DEV            = src/infra/database/migrations/**/*.ts
+
+TYPEORM_ENGINE_PROD                         = 
+TYPEORM_HOST_PROD                           = 
+TYPEORM_USERNAME_PROD                       = 
+TYPEORM_PASSWORD_PROD                       = 
+TYPEORM_DATABASE_PROD                       = 
+
+TYPEORM_DIRECTORY_AUTH_PROD                 = dist/modules/auth/entities/*.js
+TYPEORM_DIRECTORY_DOMAIN_PROD               = dist/modules/domain/entities/*.js
+TYPEORM_DIRECTORY_HELPERS_PROD              = dist/modules/helpers/entities/*.js
+TYPEORM_DIRECTORY_MIGRATIONS_PROD           = dist/infra/database/migrations/**/*.js
